@@ -1,3 +1,8 @@
+2004-08-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* fold-const.c (fold): If flag_syntax_only, don't depend on
+	BITS_PER_WORD.
+
 2004-07-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR c++/16276
